--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,14 @@
 {
   "compilerOptions": {
-    
     "target": "ES2020",
-    "module": "CommonJS",          
+    "module": "commonjs",
     "outDir": "./dist",
     "rootDir": "./src",
-    
     "strict": true,
-    "esModuleInterop": true,       
+    "esModuleInterop": true,
     "skipLibCheck": true,
-    
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    
+    "emitDecoratorMetadata": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
