--- a/package.json
+++ b/package.json
@@ -5,25 +5,27 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/src/core/bot/bot.js",
-    "dev": "nodemon src/core/bot/bot.ts"
+  "start": "node dist/index.js",
+  "dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "grammy": "^1.38.4",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "@types/node": "^25.0.2",
     "@types/pg": "^8.16.0",
     "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.11",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "ts-node": "^10.9.2"
   }
 }
