--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
+    "@types/express": "^4.17.25",
     "@types/node": "^25.0.2",
+    "@types/node-fetch": "^2.6.13",
     "@types/pg": "^8.16.0",
     "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.11",
