--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
     "grammy": "^1.38.4",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7", 
-    "typescript": "^5.9.3"
+    "sequelize": "^6.37.7",
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.25",
-    "@types/node": "^25.0.2",
+    "@types/node": "^25.0.3",
     "@types/node-fetch": "^2.6.13",
     "@types/pg": "^8.16.0",
     "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.11",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
