add build command

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cp -r assets dist/",
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts"
   },
